Fixed gmaps width on mobile.

--- a/css/styles.less
+++ b/css/styles.less
@@ -298,6 +298,11 @@ h1 span {
   .page-content {
     padding-bottom: 80px;
   }
+
+  #gmap iframe, #gmap object, #gmap embed {
+    width: 100%;
+    height: 50%;
+  }
 }
 
 /* ====================== */
